apps/f5-helloworld/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: f5-hello-world
  namespace: f5-hello-world
spec:
  replicas: 3
  selector:
    matchLabels:
      app: f5-hello-world
  template:
    metadata:
      labels:
        app: f5-hello-world
    spec:
      containers:
      - image: f5devcentral/f5-hello-world
        imagePullPolicy: Always
        name: f5-hello-world
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
