apps/f5-helloworld/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: f5-hello-world
  namespace: f5-hello-world
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: https
      port: 8443
      targetPort: 8443
      protocol: TCP
  selector:
      app: f5-hello-world
