apps/f5-helloworld/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: f5-hello-world
  name: f5-hello-world
  annotations:
    nginx.org/server-snippets: "server_name ~^.*$;"
spec:
  ingressClassName: nginx-plus
  defaultBackend:
    service:
      name: f5-hello-world
      port:
        number: 8080
  rules:
  - host: "*.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: f5-hello-world
            port:
              number: 8080
